--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,8 +66,8 @@ jobs:
                 set -e
                 cd /opt/app
                 docker login ghcr.io -u \"$GHCR_USER\" -p \"$GHCR_TOKEN\" || true
-                docker compose pull || docker-compose pull
-                docker compose up -d || docker-compose up -d
+                docker-compose pull
+                docker-compose up -d
                 # 用 GET 檢查，避免 308/405
                 curl -fsS https://app.hacuba.site/healthz >/dev/null
                 echo healthy
