--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,12 @@ services:
     restart: unless-stopped
     expose:
       - "8000"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:8000/healthz || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
     networks: [web]
 
   caddy:
@@ -17,6 +23,9 @@ services:
       - caddy_data:/data
       - caddy_config:/config
     networks: [web]
+    depends_on:
+      app:
+        condition: service_healthy
 
 networks:
   web:
