--- a/docker-compose.monitor.yml
+++ b/docker-compose.monitor.yml
@@ -11,6 +11,7 @@ services:
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--web.enable-lifecycle"     # 允許熱重載 /-/reload
+    networks: [web]
     depends_on:
       - alertmanager
 
@@ -28,3 +29,7 @@ services:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
       - "--config.expand-env=true"
       - "--log.level=info"
+    networks: [web]
+    
+networks:
+  web: {}   # 與主 compose 的 web 同名即可，Compose 會合併
