--- a/monitoring/alertmanager.yml
+++ b/monitoring/alertmanager.yml
@@ -1,21 +1,20 @@
 global:
-  smtp_smarthost: 'smtp.gmail.com:587'
-  smtp_from: 'hacuba7777@gmail.com'          # 建議跟下面 username 同一個
-  smtp_require_tls: true
-  smtp_auth_username: 'hacuba7777@gmail.com'
-  smtp_auth_password: '${GMAIL_APP_PASSWORD}'        # 不是登入密碼
+  resolve_timeout: 5m
 
 route:
-  receiver: 'email'
+  receiver: email
   group_by: ['alertname']
-  group_wait: 10s
-  group_interval: 30s
-  repeat_interval: 30m
+  group_wait: 30s
+  group_interval: 2m
+  repeat_interval: 2h
 
 receivers:
-  - name: 'email'
+  - name: email
     email_configs:
       - to: 'hacuba7777+am@gmail.com'
+        from: 'hacuba7777@gmail.com'
+        smarthost: 'smtp.gmail.com:587'
+        auth_username: 'hacuba7777@gmail.com'
+        auth_password: '${GMAIL_APP_PASSWORD}'   # ← 重點：用 env 展開
+        require_tls: true
         send_resolved: true
-        headers:
-          Subject: '[AM] {{ .CommonLabels.alertname }} - {{ .Status | toUpper }}'
