--- a/monitoring/alertmanager.yml
+++ b/monitoring/alertmanager.yml
@@ -1,20 +1,24 @@
 global:
   resolve_timeout: 5m
+  smtp_smarthost: 'smtp.gmail.com:587'
+  smtp_from: 'hacuba7777@gmail.com'
+  smtp_auth_username: 'hacuba7777@gmail.com'
+  smtp_auth_password: '${GMAIL_APP_PASSWORD}'
+  smtp_require_tls: true
+  smtp_hello: 'app.hacuba.site'     # 別用 localhost
 
 route:
   receiver: email
   group_by: ['alertname']
-  group_wait: 30s
-  group_interval: 2m
-  repeat_interval: 2h
+  group_wait: 10s
+  group_interval: 1m
+  repeat_interval: 5m
 
 receivers:
   - name: email
     email_configs:
       - to: 'hacuba7777+am@gmail.com'
-        from: 'hacuba7777@gmail.com'
-        smarthost: 'smtp.gmail.com:587'
-        auth_username: 'hacuba7777@gmail.com'
-        auth_password: '${GMAIL_APP_PASSWORD}'   # ← 重點：用 env 展開
+        hello: 'app.hacuba.site'    # 同上，避免 server 對 EHLO 挑剔
+        auth_identity: 'hacuba7777@gmail.com'   # 有些伺服器對 LOGIN/PLAIN 的 identity 會挑
         require_tls: true
         send_resolved: true
